    was set up to use a UNIX domain socket as the HTTP server, the
    socket file would be erased in error.  The symptom of this was
    that a subsequent invocation of supervisorctl could not find the
    socket file, so the process could not be controlled (it and all of
    its subprocesses would need to be killed by hand).

  - When a process was not killable with a "normal" signal at shutdown
    time, too many "INFO: waiting for x to die" messages would be sent
    to the log until we ended up killing the process with a SIGKILL.
    Now a maximum of one every three seconds is sent up until SIGKILL
    time.  Thanks to Ian Bicking.

  - Add an assertion: we never want to try to marshal None to XML-RPC
    callers.  Issue 223 in the collector from vgatto indicates that
    somehow a supervisor XML-RPC method is returning None (which
    should never happen), but I cannot identify how.  Maybe the
    assertion will give us more clues if it happens again.

  - Supervisor would crash when run under Python 2.5 because the
    xmlrpclib.Transport class in Python 2.5 changed in a
    backward-incompatible way.  Thanks to Eric Westra for the bug
    report and a fix.

  - Tests now pass under Python 2.5.

  - Better supervisorctl reporting on stop requests that have a FAILED
    status.

2.1b2

  - Added new tailProcessLog() command to the XML-RPC API that
    is more efficient for just tailing than the existing
    readProcessLog() command (Mike Naberezny).

2.1b1

  - "supervisord -h" and "supervisorctl -h" did not work (traceback
    instead of showing help view (thanks to Damjan from Macedonia for
    the bug report).

  - Processes which started successfully after failing to start
    initially are no longer reported in BACKOFF state once they are
    started successfully (thanks to Damjan from Macdonia for the bug
    report).

  - Add new 'maintail' command to supervisorctl shell, which allows
    you to tail the 'main' supervisor log.  This uses a new